[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/Fonts/ScoreUI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Sprites/Tileset.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sfx/Select.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sprites/Player.png" type="Texture" id=5]
[ext_resource path="res://Assets/Scripts/StartScreen.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sprites/Ui/musicOn.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Ui/information.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Ui/audioOff.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Ui/gamepad.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Mask.png" type="Texture" id=11]
[ext_resource path="res://Assets/Entities/Snow.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Sprites/Ui/audioOn.png" type="Texture" id=13]
[ext_resource path="res://Assets/Scripts/Bug.gd" type="Script" id=14]
[ext_resource path="res://Assets/Sprites/Bug.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Lightmask.png" type="Texture" id=16]
[ext_resource path="res://Assets/Entities/Info.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Sprites/backdrop.png" type="Texture" id=18]
[ext_resource path="res://Assets/Entities/Controls.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/Music/woods.wav" type="AudioStream" id=20]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 24, 18 )

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=23]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=24]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=25]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=27]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=28]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=29]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="OccluderPolygon2D" id=30]
polygon = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=38]
0/name = "Tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 22 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 10 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 23 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 11 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 24 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 25 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 13 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 26 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 14 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tileset.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 640, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/occluder = SubResource( 27 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 15 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tileset.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 768, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/occluder = SubResource( 28 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 16 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Tileset.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 896, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/occluder = SubResource( 29 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 17 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tileset.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1024, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/occluder = SubResource( 30 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Tileset.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1152, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Tileset.png 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1280, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="Animation" id=39]
resource_name = "Start_Fade"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.996392 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "On",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
} ]

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -996, -6 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 1275, 518 )
scale = Vector2( 10.9262, 4.12 )
z_index = -3
texture = ExtResource( 18 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -324.0
margin_right = -134.0
margin_bottom = -270.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 1 )
text = "The
Bug
Contest"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakePlayer1" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 642, 722.195 )
scale = Vector2( 0.619, 0.619 )
frames = SubResource( 36 )

[node name="FakePlayer2" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 540, 722.195 )
scale = Vector2( 0.619, 0.619 )
frames = SubResource( 37 )

[node name="Bugs" type="Node" parent="."]

[node name="Bug1" type="Area2D" parent="Bugs" groups=["Bug"]]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 1368, 636 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug1"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 41 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug1"]
position = Vector2( 0, 6 )
shape = SubResource( 42 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug1"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 16 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Bug2" type="Area2D" parent="Bugs" groups=["Bug"]]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( 1446, 576 )
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bugs/Bug2"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 41 )
frame = 1
playing = true

[node name="Collider" type="CollisionShape2D" parent="Bugs/Bug2"]
position = Vector2( 0, 6 )
shape = SubResource( 42 )

[node name="Light2D" type="Light2D" parent="Bugs/Bug2"]
position = Vector2( -2.93713, 5.87408 )
scale = Vector2( 1.04196, 1 )
texture = ExtResource( 16 )
texture_scale = 0.79
color = Color( 1, 1, 0, 0.54902 )

[node name="Leaves" type="Node" parent="."]

[node name="Snow" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( -18, -354 )
z_index = -1

[node name="Snow2" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 264, -414 )
z_index = -1

[node name="Snow3" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 546, -78 )
z_index = -1

[node name="Snow4" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 882, -186 )
z_index = -1

[node name="Snow5" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 690, -210 )
z_index = -1

[node name="Snow6" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 138, 156 )
z_index = -1

[node name="Snow7" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 198, 42 )
z_index = -1

[node name="Snow8" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 342, -162 )
z_index = -1

[node name="Snow9" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 594, 168 )
z_index = -1

[node name="Snow10" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 432, -732 )
z_index = -1

[node name="Snow11" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 768, 204 )
z_index = -1

[node name="Snow12" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( -18, 138 )
z_index = -1

[node name="Snow13" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 984, 234 )
z_index = -1

[node name="Snow14" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 1128, 312 )
z_index = -1

[node name="Snow15" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 24, -846 )
z_index = -1

[node name="Snow16" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 420, -852 )
z_index = -1

[node name="Snow17" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 714, -864 )
z_index = -1

[node name="Snow18" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 1032, -798 )
z_index = -1

[node name="Snow19" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 840, -822 )
z_index = -1

[node name="Snow20" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 288, -456 )
z_index = -1

[node name="Snow21" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 294, -684 )
z_index = -1

[node name="Snow22" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 456, -534 )
z_index = -1

[node name="Snow23" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 690, -558 )
z_index = -1

[node name="Snow24" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 1062, -558 )
z_index = -1

[node name="Snow25" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 864, -522 )
z_index = -1

[node name="Snow26" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 288, -288 )
z_index = -1

[node name="Snow27" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 1050, -288 )
z_index = -1

[node name="Snow28" parent="Leaves" instance=ExtResource( 12 )]
position = Vector2( 1194, -210 )
z_index = -1

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.564706 )
position = Vector2( -90, 486 )
scale = Vector2( 0.4, 0.4 )
tile_set = SubResource( 38 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 262152, 3, 0, 262153, 0, 0, 262154, 6, 0, 327687, 3, 0, 327688, 0, 0, 327690, 0, 0, 327691, 1, 0, 327692, 0, 0, 327693, 0, 0, 327694, 1, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 6, 0, 393220, 3, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393225, 8, 0, 393228, 8, 0, 393232, 8, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 6, 0, 458754, 4, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 7, 0 )

[node name="Mask" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.196078 )
position = Vector2( 570, 438 )
scale = Vector2( 20, 20 )
texture = ExtResource( 11 )

[node name="Start" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = 186.0
margin_right = -18.0
margin_bottom = 202.0
rect_scale = Vector2( 2.4, 2.4 )
custom_fonts/font = ExtResource( 1 )
text = "Click To Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Start"]
self_modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -5.00002
margin_top = -5.0
margin_right = 6.99998
margin_bottom = 15.0
rect_scale = Vector2( 19.725, 1.21667 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevName" type="Label" parent="."]
modulate = Color( 0.854902, 0.854902, 0.854902, 0.74902 )
margin_left = 24.0
margin_top = 852.0
margin_right = 168.0
margin_bottom = 884.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 1 )
text = "DanMan980"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Start_Fade = SubResource( 39 )

[node name="highScore" type="Label" parent="."]
margin_left = 492.0
margin_top = 444.0
margin_right = 620.0
margin_bottom = 476.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hi-Score" type="Label" parent="."]
margin_left = 544.5
margin_top = 504.0
margin_right = 672.5
margin_bottom = 536.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Hi-Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="Sprite" parent="."]
position = Vector2( 918, 240 )
texture = ExtResource( 8 )
offset = Vector2( 234, -186 )

[node name="Button" type="Button" parent="Information"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = 216.0
margin_top = -210.0
margin_right = 228.0
margin_bottom = -190.0
rect_scale = Vector2( 3.16, 2.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Information"]
visible = false
margin_left = 54.0
margin_top = -198.0
margin_right = 182.0
margin_bottom = -166.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioOff" type="AnimatedSprite" parent="."]
position = Vector2( 1158, 258 )
frames = SubResource( 40 )
animation = "On"

[node name="Button" type="Button" parent="AudioOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -30.0
margin_top = -30.0
margin_right = -18.0
margin_bottom = -10.0
rect_scale = Vector2( 3.95999, 2.84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="AudioOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Sfx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOff" type="Sprite" parent="."]
position = Vector2( 1152, 186 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="MusicOff"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -24.0
margin_top = -30.0
margin_right = -12.0
margin_bottom = -10.0
rect_scale = Vector2( 4, 2.96 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MusicOff"]
visible = false
margin_left = -168.0
margin_top = -12.0
margin_right = -40.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gamepad" type="Sprite" parent="."]
position = Vector2( 1248, 390 )
texture = ExtResource( 10 )
offset = Vector2( -96, -54 )

[node name="Button" type="Button" parent="Gamepad"]
modulate = Color( 1, 1, 1, 0.0196078 )
show_behind_parent = true
margin_left = -60.0
margin_top = -78.0
margin_right = -48.0
margin_bottom = -58.0
rect_rotation = 90.0
rect_scale = Vector2( 4.4, 3.84 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Gamepad"]
visible = false
margin_left = -276.0
margin_top = -66.0
margin_right = -148.0
margin_bottom = -34.0
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = ExtResource( 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -1.9

[node name="Info" parent="." instance=ExtResource( 17 )]
visible = false

[node name="Controls" parent="." instance=ExtResource( 19 )]
visible = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -3.0
pitch_scale = 0.9
autoplay = true

[connection signal="finished" from="Blip" to="." method="_on_Blip_finished"]
